welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:3: error: not found: value x
x = nums.length
^occurrences:4: error: not found: value x
for (i <- 0 to x-1)
               ^